[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/cardengine/ui/dialogs/abstract_form_dialog/abstract_form_dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/cardengine/ui/dialogs/new_container_dialog/new_container_dialog.gd" type="Script" id=2]

[node name="NewContainerDialog" instance=ExtResource( 1 )]
window_title = "Container"
script = ExtResource( 2 )

[node name="ContainerIdLbl" type="Label" parent="MainLayout/Form" index="0"]
margin_top = 5.0
margin_right = 103.0
margin_bottom = 19.0
text = "Container ID"

[node name="ContainerId" type="LineEdit" parent="MainLayout/Form" index="1"]
margin_left = 107.0
margin_right = 402.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="ContainerNameLbl" type="Label" parent="MainLayout/Form" index="2"]
margin_top = 33.0
margin_right = 103.0
margin_bottom = 47.0
text = "Container Name"

[node name="ContainerName" type="LineEdit" parent="MainLayout/Form" index="3"]
margin_left = 107.0
margin_top = 28.0
margin_right = 402.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="ContainerVisualLbl" type="Label" parent="MainLayout/Form" index="4"]
margin_top = 61.0
margin_right = 103.0
margin_bottom = 75.0
text = "Container Visual"

[node name="VisualLayout" type="HBoxContainer" parent="MainLayout/Form" index="5"]
margin_left = 107.0
margin_top = 56.0
margin_right = 402.0
margin_bottom = 80.0

[node name="ContainerVisual" type="LineEdit" parent="MainLayout/Form/VisualLayout" index="0"]
margin_right = 240.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false

[node name="SelectBtn" type="Button" parent="MainLayout/Form/VisualLayout" index="1"]
margin_left = 244.0
margin_right = 295.0
margin_bottom = 24.0
text = "Select"

[node name="SelectDlg" type="FileDialog" parent="." index="2"]
margin_right = 307.0
margin_bottom = 130.0
window_title = "Open a File"
resizable = true
mode = 0
filters = PoolStringArray( "*.tscn ; Card Scene" )
[connection signal="pressed" from="MainLayout/Form/VisualLayout/SelectBtn" to="." method="_on_SelectBtn_pressed"]
[connection signal="file_selected" from="SelectDlg" to="." method="_on_SelectDlg_file_selected"]
